--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,5 +36,6 @@
     <string name="daily_remainder_text">Pengingat untuk membuka aplikasi setiap hari agar mengetahui update film terbaru</string>
     <string name="release_remainder_text">Pengingat film yang rilis hari ini</string>
     <string name="loading">Loading...</string>
+    <string name="scan_qr_code">Scan QR Code</string>
 
 </resources>
